docs: estrutura inicial de documentação
