# app/Http/Controllers/API/V0/AuraController.php
@@ -15,6 +15,27 @@ class AuraController extends Controller
         $this->auraNLP = $auraNLP;
     }
 
+    /**
+     * @OA\Get(
+     *      path="/abc",
+     *      operationId="getProjectsList",
+     *      tags={"Aura"},
+     *      summary="Get list of projects",
+     *      description="Returns list of projects",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     *     )
+     */
     public function index(string $route, string $text) {
         $response = $this->auraNLP->fetch($route, $text);
 
